--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "puppeteer": "^10.1.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
